docs(family): menambahkan dokumentasi api untu deleteFamily endpoint
